micro-uploader-k8s/k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-frontend
  namespace: image-uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader-frontend
  template:
    metadata:
      labels:
        app: uploader-frontend
    spec:
      containers:
        - name: uploader-frontend
          image: uploader-frontend:local
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: uploader-frontend
  namespace: image-uploader
spec:
  selector:
    app: uploader-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
