micro-uploader-k8s/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uploader-ingress
  namespace: image-uploader
spec:
  ingressClassName: nginx
  rules:
    - host: uploader.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: uploader-backend
                port:
                  number: 5000
          - path: /uploads/
            pathType: Prefix
            backend:
              service:
                name: uploader-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uploader-frontend
                port:
                  number: 80
